--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.10",
     "js-cookie": "^3.0.5",
     "next": "15.1.4",
     "react": "^19.0.0",
